jaml/examples/invalid/brace_list_nl.jaml
# Brace lists with newlines are allowed in YAML, but not JAML.
# JAML's brace syntax is intentionally compact/single-line.
# For multi-line lists, use JAML's indentation-based block syntax.
# (YAML oddly rejects trailing commas, but JAML allows them in brace syntax.)
brace_list_nl: [
  1,
  2,
  3
]
